--- a/index.ipynb
+++ b/index.ipynb
@@ -280,7 +280,8 @@
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values):\n",
-    "    y =\n",
+    "    for i in x_values:\n",
+    "        \n",
     "    return {'x': x_values, 'y': }"
    ]
   },
