--- a/index.ipynb
+++ b/index.ipynb
@@ -280,8 +280,8 @@
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values):\n",
-    "    for i in x_values:\n",
-    "        \n",
+    "    for i in list(rangex_values:\n",
+    "        y_values[]\n",
     "    return {'x': x_values, 'y': }"
    ]
   },
