Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -280,8 +280,8 @@
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values):\n",
-    "    for i in list(rangex_values:\n",
-    "        y_values[]\n",
+    "    for i in list(range(x_values)):\n",
+    "        y_values[0] = \n",
     "    return {'x': x_values, 'y': }"
    ]
   },
