--- a/index.ipynb
+++ b/index.ipynb
@@ -281,7 +281,7 @@
    "source": [
     "def m_b_data(m, b, x_values):\n",
     "    for i in list(range(x_values)):\n",
-    "        y_values[0] = \n",
+    "        y_values[i] = \n",
     "    return {'x': x_values, 'y': }"
    ]
   },
