Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -281,7 +281,7 @@
    "source": [
     "def m_b_data(m, b, x_values):\n",
     "    for i in list(range(x_values)):\n",
-    "        y_values[i] = \n",
+    "        y_values[i] = m * x_values[i] + b\n",
     "    return {'x': x_values, 'y': }"
    ]
   },
