--- a/index.ipynb
+++ b/index.ipynb
@@ -280,7 +280,7 @@
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values):\n",
-    "    y_values = []\n",
+    "    y_values = x[:]\n",
     "    for i in list(range(len(x_values))):\n",
     "        y_values[i] = m * x_values[i] + b\n",
     "    return {'x': x_values, 'y': y_values}"
