--- a/index.ipynb
+++ b/index.ipynb
@@ -320,7 +320,10 @@
    "outputs": [],
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
-    "    "
+    "    y_values = x_values[:]\n",
+    "    for i in list(range(len(x_values))):\n",
+    "        y_values[i] = m * x_values[i] + b\n",
+    "    return {'x': x_values, 'y': y_values}"
    ]
   },
   {
