Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -407,7 +407,7 @@
    "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    expected increase = (second_show['attendance'] - first_show['attendance']) / \n",
+    "    expected increase = (second_show['attendance'] - first_show['attendance']) / (second_show['attendance'] - first_show['atte'])\n",
     "    return expected_increase"
    ]
   },
