Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -402,12 +402,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-20-aed007f5f141>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-aed007f5f141>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    expected increase = (second_show['attendance'] - first_show['attendance']) / (second_show['attendance'] - first_show['attendance'])\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    expected increase = (second_show['attendance'] - first_show['attendance']) / (second_show['attendance'] - first_show['atte'])\n",
+    "    expected increase = (second_show['attendance'] - first_show['attendance']) / (second_show['attendance'] - first_show['attendance'])\n",
     "    return expected_increase"
    ]
   },
