--- a/index.ipynb
+++ b/index.ipynb
@@ -402,23 +402,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-21-e2d541e88f6e>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-22-142a4f175069>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-21-e2d541e88f6e>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    expected increase = (second_show['attendance'] - first_show['attendance']) / (second_show['budget'] - first_show['budget'])\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-142a4f175069>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    expected increase = dy/dx\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
     "    dy = second_show['attendance'] - first_show['attendance']\n",
-    "    dx\n",
-    "    expected increase = () / (second_show['budget'] - first_show['budget'])\n",
+    "    dx = second_show['budget'] - first_show['budget']\n",
+    "    expected increase = dy/dx\n",
     "    return expected_increase"
    ]
   },
