--- a/index.ipynb
+++ b/index.ipynb
@@ -574,7 +574,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def slope(x_values, y_values):\n"
+    "def slope(x_values, y_values):\n",
+    "    dx = max(x_values) - min(x_values)\n",
+    "    dy = y_valu"
    ]
   },
   {
