--- a/index.ipynb
+++ b/index.ipynb
@@ -576,7 +576,7 @@
    "source": [
     "def slope(x_values, y_values):\n",
     "    dx = max(x_values) - min(x_values)\n",
-    "    dy = y_valu"
+    "    dy = y_values[x_values.index()]"
    ]
   },
   {
