--- a/index.ipynb
+++ b/index.ipynb
@@ -609,13 +609,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
     "    if m == None:\n",
-    "        m ="
+    "        m = slope(x_values, y_values)\n",
+    "    "
    ]
   },
   {
